--- a/summary_loc_exp.Rmd
+++ b/summary_loc_exp.Rmd
@@ -54,22 +54,7 @@ exp_nTb_pc5 <-exp_pcgene[exp_pcgene$gene %in% nTb_pc5$gene,]
 exp_nTb_pc10 <-exp_pcgene[exp_pcgene$gene %in% nTb_pc10$gene,]
 exp_nTb_pc20 <-exp_pcgene[exp_pcgene$gene %in% nTb_pc20$gene,]
 
-#Writing into bed files for further use.
-write.table(exp_Tb_lincRNA5,file = "exp_Tb_lincRNA5.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_Tb_lincRNA10,file = "exp_Tb_lincRNA10.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_Tb_lincRNA20,file = "exp_Tb_lincRNA20.txt",sep="\t",quote = F,col.names = F,row.names = F)
 
-write.table(exp_nTb_lincRNA5,file = "exp_nTb_lincRNA5.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_nTb_lincRNA10,file = "exp_nTb_lincRNA10.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_nTb_lincRNA20,file = "exp_nTb_lincRNA20.txt",sep="\t",quote = F,col.names = F,row.names = F)
-
-write.table(exp_Tb_pc5,file = "exp_Tb_pc5.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_Tb_pc10,file = "exp_Tb_pc10.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_Tb_pc20,file = "exp_Tb_pc20.txt",sep="\t",quote = F,col.names = F,row.names = F)
-
-write.table(exp_nTb_pc5,file = "exp_nTb_pc5.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_nTb_pc10,file = "exp_nTb_pc10.txt",sep="\t",quote = F,col.names = F,row.names = F)
-write.table(exp_nTb_pc20,file = "exp_nTb_pc20.txt",sep="\t",quote = F,col.names = F,row.names = F)
 
 CData <-function(df){
   return(cbind(df,fact=rep(deparse(substitute(df)),length(df[,1]))))
@@ -111,7 +96,7 @@ Original set|Threshold|Overlaps|TAD-bound genes
 
 ```{r exp_lincRNA, echo=FALSE,fig.height=8,fig.width=6}
 short_med<-function(x){return(round(median(log10(x)),3))}
-short_wilcox <- function(x,y){return(round(wilcox.test(x, y)$p.value,5))}
+short_wilcox <- function(x,y){return(format(wilcox.test(x, y)$p.value,digits=3))}
 
 l5 <-ggplot(data=whole_exp[whole_exp$fact %in% c("exp_Tb_lincRNA5","exp_nTb_lincRNA5"),])+
   geom_boxplot(aes(fact, log10(expression)), fill=c("darkred","darkblue"), notch = T)+theme_bw()+ggtitle("lincRNA, 5%")+
@@ -160,11 +145,108 @@ grid.arrange(nrow=2, l5, l10, l20, p5, p10, p20)
 
 ##Subcellular localization
 
-...
+```{r loc_lincRNA, echo=FALSE,fig.height=8,fig.width=6}
+loc_lincRNA <- read.table("subcell_loc/all.lincRNA.GM12878.subcellular.ratio.txt", header = T)
+loc_pcgene <- read.table("subcell_loc/all.pcgene.GM12878.subcellular.ratio.txt", header = T)
+#loading TAD-bound lincRNAs sets
+Tb_lincRNA5 <- read.table("linc_RNA/TADbound-lincRNA5.bed")
+Tb_lincRNA10 <- read.table("linc_RNA/TADbound-lincRNA10.bed")
+Tb_lincRNA20 <- read.table("linc_RNA/TADbound-lincRNA20.bed")
+#loading TAD-bound pcgenes sets
+Tb_pc5 <- read.table("pc_genes/TADbound-pcgene5.bed")
+Tb_pc10 <- read.table("pc_genes/TADbound-pcgene10.bed")
+Tb_pc20 <- read.table("pc_genes/TADbound-pcgene20.bed")
+#loading non-TAD-bound lincRNAs sets
+nTb_lincRNA5 <- read.table("linc_RNA/nonTADbound-lincRNA5.bed")
+nTb_lincRNA10 <- read.table("linc_RNA/nonTADbound-lincRNA10.bed")
+nTb_lincRNA20 <- read.table("linc_RNA/nonTADbound-lincRNA20.bed")
+#loading non-TAD-bound pcgenes sets
+nTb_pc5 <- read.table("pc_genes/nonTADbound-pcgene5.bed")
+nTb_pc10 <- read.table("pc_genes/nonTADbound-pcgene10.bed")
+nTb_pc20 <- read.table("pc_genes/nonTADbound-pcgene20.bed")
+
+colnames(Tb_lincRNA5)= colnames(Tb_lincRNA10)=colnames(Tb_lincRNA20)=colnames(nTb_lincRNA5)=colnames(nTb_lincRNA10)=
+  colnames(nTb_lincRNA20)=colnames(Tb_pc5)=colnames(Tb_pc10)=colnames(Tb_pc20)=colnames(nTb_pc5)=colnames(nTb_pc10)=
+  colnames(nTb_pc20) <-c("chr", "start", "end", "gene", "strand")
+
+
+#Splitting localisation data into TADbound (Tb) and non-TADbound (nTb)
+
+loc_Tb_lincRNA5 <-loc_lincRNA[loc_lincRNA$gene %in% Tb_lincRNA5$gene,]
+loc_Tb_lincRNA10 <-loc_lincRNA[loc_lincRNA$gene %in% Tb_lincRNA10$gene,]
+loc_Tb_lincRNA20 <-loc_lincRNA[loc_lincRNA$gene %in% Tb_lincRNA20$gene,]
+
+loc_nTb_lincRNA5 <-loc_lincRNA[loc_lincRNA$gene %in% nTb_lincRNA5$gene,]
+loc_nTb_lincRNA10 <-loc_lincRNA[loc_lincRNA$gene %in% nTb_lincRNA10$gene,]
+loc_nTb_lincRNA20 <-loc_lincRNA[loc_lincRNA$gene %in% nTb_lincRNA20$gene,]
+
+loc_Tb_pc5 <-loc_pcgene[loc_pcgene$gene %in% Tb_pc5$gene,]
+loc_Tb_pc10 <-loc_pcgene[loc_pcgene$gene %in% Tb_pc10$gene,]
+loc_Tb_pc20 <-loc_pcgene[loc_pcgene$gene %in% Tb_pc20$gene,]
+
+loc_nTb_pc5 <-loc_pcgene[loc_pcgene$gene %in% nTb_pc5$gene,]
+loc_nTb_pc10 <-loc_pcgene[loc_pcgene$gene %in% nTb_pc10$gene,]
+loc_nTb_pc20 <-loc_pcgene[loc_pcgene$gene %in% nTb_pc20$gene,]
+
+CData <-function(df){
+  return(cbind(df,fact=rep(deparse(substitute(df)),length(df[,1]))))
+}
+whole_loc <- rbind(CData(loc_Tb_pc5), CData(loc_Tb_pc10), CData(loc_Tb_pc20), CData(loc_nTb_pc5), CData(loc_nTb_pc10), CData(loc_nTb_pc20),
+                   CData(loc_Tb_lincRNA5), CData(loc_Tb_lincRNA10), CData(loc_Tb_lincRNA20), CData(loc_nTb_lincRNA5), CData(loc_nTb_lincRNA10), CData(loc_nTb_lincRNA20))
+
+short_med<-function(x){return(round(median(log10(x)),3))}
+short_wilcox <- function(x,y){return(format(wilcox.test(x, y)$p.value,digits=3))}
+
+
+
+l5 <-ggplot(data=whole_loc[whole_loc$fact %in% c("loc_Tb_lincRNA5","loc_nTb_lincRNA5"),])+
+  geom_boxplot(aes(fact, log10(ratio)), fill=c("darkred","darkblue"), notch = T)+theme_bw()+ggtitle("lincRNA, 5%")+
+  annotate(x=c(1, 2),y=c(-1,-1),geom = "text", label=c(short_med(whole_loc$ratio[whole_loc$fact=="loc_Tb_lincRNA5"]), 
+                                                       short_med(whole_loc$ratio[whole_loc$fact=="loc_nTb_lincRNA5"])))+
+  scale_x_discrete(name=paste("p-value = ", short_wilcox(whole_loc$ratio[whole_loc$fact=="loc_Tb_lincRNA5"],
+                                                         whole_loc$ratio[whole_loc$fact=="loc_nTb_lincRNA5"]), sep=" "),
+                   labels=c("TADb", "non-TADb"))
+l10 <-ggplot(data=whole_loc[whole_loc$fact %in% c("loc_Tb_lincRNA10","loc_nTb_lincRNA10"),])+
+  geom_boxplot(aes(fact, log10(ratio)), fill=c("darkred","darkblue"), notch = T)+theme_bw()+ggtitle("lincRNA, 10%")+
+  annotate(x=c(1, 2),y=c(-1,-1),geom = "text", label=c(short_med(whole_loc$ratio[whole_loc$fact=="loc_Tb_lincRNA10"]), 
+                                                       short_med(whole_loc$ratio[whole_loc$fact=="loc_nTb_lincRNA10"])))+
+  scale_x_discrete(name=paste("p-value = ", short_wilcox(whole_loc$ratio[whole_loc$fact=="loc_Tb_lincRNA10"],
+                                                         whole_loc$ratio[whole_loc$fact=="loc_nTb_lincRNA10"]), sep=" "),
+                   labels=c("TADb", "non-TADb"))
+l20 <-ggplot(data=whole_loc[whole_loc$fact %in% c("loc_Tb_lincRNA20","loc_nTb_lincRNA20"),])+
+  geom_boxplot(aes(fact, log10(ratio)), fill=c("darkred","darkblue"), notch = T)+theme_bw()+ggtitle("lincRNA, 20%")+
+  annotate(x=c(1, 2),y=c(-1,-1),geom = "text", label=c(short_med(whole_loc$ratio[whole_loc$fact=="loc_Tb_lincRNA20"]), 
+                                                       short_med(whole_loc$ratio[whole_loc$fact=="loc_nTb_lincRNA20"])))+
+  scale_x_discrete(name=paste("p-value = ", short_wilcox(whole_loc$ratio[whole_loc$fact=="loc_Tb_lincRNA20"],
+                                                         whole_loc$ratio[whole_loc$fact=="loc_nTb_lincRNA20"]), sep=" "),
+                   labels=c("TADb", "non-TADb"))
+p5 <-ggplot(data=whole_loc[whole_loc$fact %in% c("loc_Tb_pc5","loc_nTb_pc5"),])+
+  geom_boxplot(aes(fact, log10(ratio)), fill=c("darkred","darkblue"), notch = T)+theme_bw()+ggtitle("protein-coding, 5%")+
+  annotate(x=c(1, 2),y=c(-1,-1),geom = "text", label=c(short_med(whole_loc$ratio[whole_loc$fact=="loc_Tb_pc5"]), 
+                                                       short_med(whole_loc$ratio[whole_loc$fact=="loc_nTb_pc5"])))+
+  scale_x_discrete(name=paste("p-value = ", short_wilcox(whole_loc$ratio[whole_loc$fact=="loc_Tb_pc5"],
+                                                         whole_loc$ratio[whole_loc$fact=="loc_nTb_pc5"]), sep=" "),
+                   labels=c("TADb", "non-TADb"))
+p10 <-ggplot(data=whole_loc[whole_loc$fact %in% c("loc_Tb_pc10","loc_nTb_pc10"),])+
+  geom_boxplot(aes(fact, log10(ratio)), fill=c("darkred","darkblue"), notch = T)+theme_bw()+ggtitle("protein-coding, 10%")+
+  annotate(x=c(1, 2),y=c(-1,-1),geom = "text", label=c(short_med(whole_loc$ratio[whole_loc$fact=="loc_Tb_pc10"]), 
+                                                       short_med(whole_loc$ratio[whole_loc$fact=="loc_nTb_pc10"])))+
+  scale_x_discrete(name=paste("p-value = ", short_wilcox(whole_loc$ratio[whole_loc$fact=="loc_Tb_pc10"],
+                                                         whole_loc$ratio[whole_loc$fact=="loc_nTb_pc10"]), sep=" "),
+                   labels=c("TADb", "non-TADb"))
+p20 <-ggplot(data=whole_loc[whole_loc$fact %in% c("loc_Tb_pc20","loc_nTb_pc20"),])+
+  geom_boxplot(aes(fact, log10(ratio)), fill=c("darkred","darkblue"), notch = T)+theme_bw()+ggtitle("protein-coding, 20%")+
+  annotate(x=c(1, 2),y=c(-1,-1),geom = "text", label=c(short_med(whole_loc$ratio[whole_loc$fact=="loc_Tb_pc20"]), 
+                                                       short_med(whole_loc$ratio[whole_loc$fact=="loc_nTb_pc20"])))+
+  scale_x_discrete(name=paste("p-value = ", short_wilcox(whole_loc$ratio[whole_loc$fact=="loc_Tb_pc20"],
+                                                         whole_loc$ratio[whole_loc$fact=="loc_nTb_pc20"]), sep=" "),
+                   labels=c("TADb", "non-TADb"))
+grid.arrange(nrow=2, l5, l10, l20, p5, p10, p20)
+```
 
 ##Tissue specificity
 
-...
+
 
 
 
