--- a/summary_loc_exp.Rmd
+++ b/summary_loc_exp.Rmd
@@ -9,6 +9,7 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 
 #Loading data:
+#setwd("/home/cyril/Documents/Master/sem_1/First_step/data/")
 setwd("/home/cyril/Documents/First_step/data/")
 whole_loc <- read.table("subcell_loc/whole_loc.txt", header=T)
 whole_exp <- read.table("expression/whole_exp.txt", header=T)
@@ -29,17 +30,17 @@ Both lincRNAs and protein coding genes have been overlapped with TAD boundaries,
 
 Original set|Threshold|Overlaps|TAD-bound genes
 ------------|---------|--------|-----
-2510|5%|865|609
-||10%|1481|960
-||20%|2554|1420
+2510|5%|865|609 (`r round((100*609)/2510,1)`%)
+||10%|1481|960 (`r round((100*960)/2510,1)`%)
+||20%|2554|1420 (`r round((100*1420)/2510,1)`%)
 
 #Protein-coding genes
 
 Original set|Threshold|Overlaps|TAD-bound genes
 ------------|---------|--------|-----
-14846|5%|6576|4607
-||10%|12017|7495
-||20%|21544|11337
+14846|5%|6576|4607 (`r round((100*4607)/14846,1)`%)
+||10%|12017|7495 (`r round((100*7495)/14846,1)`%)
+||20%|21544|11337 (`r round((100*11337)/14846,1)`%)
 
 #Results
 
@@ -51,7 +52,7 @@ It seems the threshold used to define TAD-boundariesdoes not have much influence
 The TAD-bound lincRNAs have similar expression levels to the non-TAD-bound lincRNAs, regardless of which threshold was used, whereas the TAD-bound protein-coding genes where always more expressed than the rest.
 
 
-```{r exp_lvl, echo=FALSE,fig.height=8,fig.width=6}
+```{r exp_lvl, echo=FALSE,fig.height=8,fig.width=8}
 short_med<-function(x){return(round(median(log10(x)),3))}
 short_wilcox <- function(x,y){return(format(wilcox.test(x, y)$p.value,digits=3))}
 whole_exp$threshold <- as.factor(whole_exp$threshold)
@@ -76,7 +77,7 @@ ggplot(data=whole_exp)+
   geom_boxplot(aes(x=TAD, y=log10(expression),fill=TAD),notch=T)+
   geom_text(data=med.fac, aes(x=TAD, y=-1, label=x), 
             colour="black", inherit.aes=FALSE, parse=FALSE)+
-  geom_text(data=wilcox_p, aes(x=1.5, y=1, label=paste0("p-value=",pval)), 
+  geom_text(data=wilcox_p, aes(x=1.5, y=1, label=paste0("p=",pval)), 
             colour="black", inherit.aes=FALSE, parse=FALSE)+
   theme_bw()
 ```
@@ -86,7 +87,7 @@ ggplot(data=whole_exp)+
 The ratios depicted below represent the abundance of RNA in the cytoplasm relative to the nucleus. Again, regardless of the threshold used to define TAD-boundaries, There is no significant difference between the localization of TAD-bound and non-TAD-bound lincRNAs, while the TAD-bound protein-coding genes are always more abundant in the cytoplasm than in the nucleus.
 
 
-```{r local, echo=FALSE,fig.height=8,fig.width=6}
+```{r local, echo=FALSE,fig.height=8,fig.width=8}
 
 short_med<-function(x){return(round(median(log10(x)),3))}
 short_wilcox <- function(x,y){return(format(wilcox.test(x, y)$p.value,digits=3))}
@@ -114,7 +115,7 @@ ggplot(data=whole_loc)+
   geom_boxplot(aes(x=TAD, y=log10(ratio),fill=TAD),notch=T)+
   geom_text(data=med.fac, aes(x=TAD, y=-1, label=x), 
             colour="black", inherit.aes=FALSE, parse=FALSE)+
-  geom_text(data=wilcox_p, aes(x=1.5, y=0.5, label=paste0("p-value=",pval)), 
+  geom_text(data=wilcox_p, aes(x=1.5, y=0.5, label=paste0("p=",pval)), 
             colour="black", inherit.aes=FALSE, parse=FALSE)+
   theme_bw()
 
@@ -124,7 +125,7 @@ ggplot(data=whole_loc)+
 
 $\tau$ was calculated from a set of tissue-wise expression level for all transcripts. Again, there seem to be no difference in tissue specificity between TAD-bound and nonTAD-bound lincRNAs, whereas the TAD-bound protein coding genes appear to be less tissue specific. Overall the lincRNAs are more tissue specific than protein coding genes.
 
-```{r tissue, echo=FALSE,fig.height=8,fig.width=6}
+```{r tissue, echo=FALSE,fig.height=8,fig.width=8}
 
 library(plyr)
 short_med<-function(x){return(round(median(log10(x)),3))}
@@ -153,7 +154,7 @@ ggplot(data=whole_tau)+
   geom_boxplot(aes(x=TAD, y=tau,fill=TAD),notch=T)+
   geom_text(data=med.fac, aes(x=TAD, y=0, label=x), 
             colour="black", inherit.aes=FALSE, parse=FALSE)+
-  geom_text(data=wilcox_p, aes(x=1.5, y=0.25, label=paste0("p-value=",pval)), 
+  geom_text(data=wilcox_p, aes(x=1.5, y=0.25, label=paste0("p=",pval)), 
             colour="black", inherit.aes=FALSE, parse=FALSE)+
   theme_bw()
 ```
